PCQ-2093 reduce mutable state (#1672)