@@ -2,10 +2,7 @@ package uk.gov.hmcts.reform.pcqbackend.security;
 
 import org.junit.jupiter.api.BeforeEach;
 import org.junit.jupiter.api.Test;
-import org.springframework.beans.factory.annotation.Autowired;
-import org.testcontainers.shaded.org.apache.commons.lang3.reflect.FieldUtils;
 
-import java.util.Arrays;
 import java.util.List;
 
 import static org.junit.jupiter.api.Assertions.assertFalse;
@@ -13,20 +10,16 @@ import static org.junit.jupiter.api.Assertions.assertTrue;
 
 class AuthorisedServicesTest {
 
-    private static final String FIELD_NAME = "authorisedServicesList";
     private static final String VALID_AUTHORISED_SERVICE = "reform_scan_blob_router";
     private static final String INVALID_AUTHORISED_SERVICE = "made_up";
     private static final String AUTHORISED_SERVICE_SUCCESS = "Should return true for successful service.";
     private static final String AUTHORISED_SERVICE_FAILURE = "Should return false for unsuccessful service.";
 
-    @Autowired
     private AuthorisedServices authorisedServices;
 
     @BeforeEach
-    void setUp() throws IllegalAccessException {
-        authorisedServices = new AuthorisedServices();
-        List<String> list = Arrays.asList(VALID_AUTHORISED_SERVICE);
-        FieldUtils.writeField(authorisedServices, FIELD_NAME, list, true);
+    void setUp() {
+        authorisedServices = new AuthorisedServices(List.of(VALID_AUTHORISED_SERVICE));
     }
 
     @Test
